--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
     <div class="footer">
       <div class="container">
-        <img src="../BlueShip/Images/logo2-removebg-preview.png" alt="" />
+        <img src="../BlueShip/Images/logo.png" alt="" />
         <p>we are social</p>
         <div class="social-icons">
           <a href="#" class="fab fa-facebook-f"></a>
