--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
     <!-- Start Subsctibe -->
 
-    <div class="subscribe">
+    <!-- <div class="subscribe">
       <div class="container">
         <form action="">
           <i class="far fa-envelope fa-lg"></i>
@@ -455,7 +455,7 @@
           Mauris blan dit aliquet elit, eget tincidunt.
         </p>
       </div>
-    </div>
+    </div> -->
 
     <!-- End Subsctibe -->
 
