--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Kasper</title>
     <!-- Render all elements normally -->
     <link rel="stylesheet" href="../BlueShip/CSS/normalize.css" />
@@ -443,7 +443,7 @@
 
     <!-- Start Subsctibe -->
 
-    <!-- <div class="subscribe">
+    <div class="subscribe">
       <div class="container">
         <form action="">
           <i class="far fa-envelope fa-lg"></i>
@@ -455,7 +455,7 @@
           Mauris blan dit aliquet elit, eget tincidunt.
         </p>
       </div>
-    </div> -->
+    </div>
 
     <!-- End Subsctibe -->
 
