--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   <body>
     <!-- Start Header -->
+    <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
+
 
     <header>
       <div class="container">
@@ -31,10 +33,10 @@
           <i class="fas fa-bars toggle-menu"></i>
           <ul>
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#service">Service</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +69,7 @@
 
     <!-- Start Services -->
 
-    <div class="services">
+    <div id="service" class="services">
       <div class="container">
         <div class="main-heading">
           <h2>services</h2>
@@ -145,7 +147,7 @@
 
     <!-- Start Portolio -->
 
-    <div class="portfolio">
+    <div  id="portfolio" class="portfolio">
       <div class="container">
         <div class="main-heading">
           <h2>portfolio</h2>
@@ -242,7 +244,7 @@
 
     <!-- Start About -->
 
-    <div class="about">
+    <div  id="about" class="about">
       <div class="container">
         <div class="main-heading">
           <h2>about us</h2>
@@ -461,7 +463,7 @@
 
     <!-- Start Contact -->
 
-    <div class="contact">
+    <div  id="contact" class="contact">
       <div class="container">
         <div class="main-heading">
           <h2>contact us</h2>
