--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <img src="../BlueShip/Images/logo1-removebg-preview.png" alt="Logo" />
         </a>
         <nav>
-          <i class="fas fa-bars toggle-menu"></i>
+          <!-- <i class="fas fa-bars toggle-menu"></i> -->
           <ul>
-            <li><a class="active" href="#">Home</a></li>
+            <!-- <li><a class="active" href="#">Home</a></li> -->
             <li><a href="#service">Service</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#about">About</a></li>
